test/org/midica/testfiles/failing/eff-flow-broken-by-const.midica
INCLUDE inc/instruments.midica


0: vol.wait()
CONST $x = y
0: .set(50)

